# FairyTale

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: genindex.html  index.html  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
fairy_tale/: fairy_tale.py
tests/: test_fairy_tale.py  test_main.py  test_pdf.py
